# cocktail-lang

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  NumericLiteral.bm.cc  StringLiteral.bm.cc
experimental/: CMakeLists.txt  SyntaxHelper.cc  SyntaxHelper.h  main.cc  syntax.lpp  syntax.ypp
experimental/AST/: Declaration.cc  Declaration.h  Expression.cc  Expression.h  ExpressionOrFieldList.cc  ExpressionOrFieldList.h  FunctionDefinition.cc  FunctionDefinition.h  Member.cc  Member.h  Statement.cc  Statement.h  StructDefinition.h
experimental/Interpreter/: Action.cc  Action.h  AssocList.h  ConsList.h  Interpreter.cc  Interpreter.h  TypeCheck.cc  TypeCheck.h  Value.cc  Value.h
include/Cocktail/: SourceBuffer.h
include/Cocktail/Check/: Check.h  Context.h  Convert.h  DeclarationNameStack.h  NodeBlockStack.h  NodeStack.h  PendingBlock.h
include/Cocktail/CodeGen/: CodeGen.h
include/Cocktail/Common/: CharacterSet.h  Check.h  CheckInternal.h  CommandLine.h  EnumBase.h  Error.h  IndexBase.h  IndirectValue.h  MetaProgramming.h  Ostream.h  PrettyStackTraceFunction.h  StringHelpers.h  VLog.h  VLogInternal.h  Yaml.t.h
include/Cocktail/CppRefactor/: FnInserter.h  ForRange.h  Matcher.h  MatcherManager.h  VarDecl.h
include/Cocktail/Diagnostics/: DiagnosticEmitter.h  DiagnosticKind.def  DiagnosticKind.h  DiagnosticRegistry.def  NullDiagnostics.h  SortingDiagnosticConsumer.h
include/Cocktail/Driver/: Driver.h  Flags.def
include/Cocktail/Lex/: LexHelpers.h  NumericLiteral.h  StringLiteral.h  TokenKind.def  TokenKind.h  TokenizedBuffer.h
include/Cocktail/LexNew/: LexHelpers.h  NumericLiteral.h  StringLiteral.h  TokenKind.h  TokenizedBuffer.h
include/Cocktail/Lexer/: CharacterSet.h  LexHelper.h  NumericLiteral.h  StringLiteral.h  TokenKind.def  TokenKind.h  TokenRegistry.def  TokenizedBuffer.h
include/Cocktail/Lower/: FileContext.h  FunctionContext.h  Lower.h
include/Cocktail/Lowering/: LowerToLLVM.h
include/Cocktail/Parse/: Context.h  NodeKind.def  NodeKind.h  Precedence.h  Tree.h  (+3 more)
lib/: SourceBuffer.cc
lib/Check/: Check.cc  Context.cc  Convert.cc  DeclarationNameStack.cc  HandleArray.cc  HandleCallExpression.cc  HandleClass.cc  HandleCodeBlock.cc  HandleFunction.cc  HandleIfExpression.cc  HandleIfStatement.cc  HandleIndex.cc  HandleInterface.cc  HandleLet.cc  HandleLiteral.cc  HandleLoopStatement.cc  HandleName.cc  HandleNamedConstraint.cc  HandleNamespace.cc  HandleNoop.cc  HandleOperator.cc  HandlePackage.cc  HandleParameterList.cc  HandleParen.cc  HandlePatternBinding.cc  HandleStatement.cc  HandleStruct.cc  HandleVariable.cc  NodeBlockStack.cc  NodeStack.cc
lib/CodeGen/: CodeGen.cc
lib/Common/: CheckInternal.cc  CommandLine.cc  StringHelpers.cc  Yaml.t.cc
lib/CppRefactor/: FnInserter.cc  ForRange.cc  Matcher.cc  VarDecl.cc
lib/Diagnostics/: DiagnosticEmitter.cc  DiagnosticKind.cc
lib/Driver/: Driver.cc
lib/Lex/: LexHelpers.cc  NumericLiteral.cc  StringLiteral.cc  TokenKind.cc  TokenizedBuffer.cc
lib/LexNew/: LexHelpers.cc  NumericLiteral.cc  StringLiteral.cc  TokenKind.cc  TokenizedBuffer.cc
lib/Lexer/: NumericLiteral.cc  StringLiteral.cc  TokenKind.cc  TokenizedBuffer.cc
lib/Lower/: FileContext.cc  FunctionContext.cc  Handle.cc  HandleExpressionCategory.cc  HandleType.cc  Lower.cc
lib/Lowering/: LowerToLLVM.cc
lib/Parse/: Context.cc  HandleArrayExpression.cc  HandleBraceExpression.cc  HandleCallExpression.cc  HandleCodeBlock.cc  HandleDeclarationNameAndParams.cc  HandleDeclarationScopeLoop.cc  HandleExpression.cc  HandleFunction.cc  HandleIndexExpression.cc  HandleLet.cc  HandleNamespace.cc  HandlePackage.cc  HandleParameter.cc  HandleParenCondition.cc  HandleParenExpression.cc  HandlePattern.cc  HandlePeriod.cc  HandleStatement.cc  HandleType.cc  HandleVar.cc  NodeKind.cc  Precedence.cc  State.cc  Tree.cc
lib/ParseBK/: ParseNodeKind.cc  ParseTree.cc  ParserImpl.cc  Precedence.cc
lib/Parser/: ParseNodeKind.cc  ParseTree.cc  ParserImpl.cc  Precedence.cc
lib/SemIR/: BuiltinKind.cc  EntryPoint.cc  File.cc  Formatter.cc  Node.cc  NodeKind.cc
lib/Semantics/: SemanticsIR.cc  SemanticsIRFactory.cc
lib/Source/: SourceBuffer.cc
lib/Testing/: Matcher.t.cc  Mocks.t.cc  Yaml.t.cc
tools/: CMakeLists.txt
tools/ClangCase/: CMakeLists.txt  ClangToolingCase.cc
tools/CppRefactor/: CMakeLists.txt  Matcher.h  main.cc
tools/Driver/: CMakeLists.txt  driver_main.cc
unittests/: CMakeLists.txt  SourceBuffer.t.cc  TokenKind.t.cc  TokenizedBuffer.t.cc  TokenizedBuffer.t.h
unittests/Common/: CMakeLists.txt  Check.t.cc  EnumBase.t.cc  EnumBase.t.def  Error.t.cc  IndirectValue.t.cc  MetaProgramming.t.cc  StringHelper.t.cc  StringHelpers.t.cc  VLog.t.cc
unittests/CppRefactor/: FnInserter.t.cc  ForRange.t.cc  VarDecl.t.cc
unittests/Diagnostics/: DiagnosticEmitter.t.cc  DiagnosticKind.t.cc  SortingDiagnosticConsumer.t.cc
unittests/Driver/: Driver.t.cc
unittests/Fuzzer/: CMakeLists.txt
unittests/Fuzzer/Lexer/: CMakeLists.txt  TokenizedBufferFuzzer.cc
unittests/Fuzzer/Lexer/fuzzer_corpus/: test
unittests/Lex/: CMakeLists.txt  NumericLiteral.t.cc  StringLiteral.t.cc  TokenKind.t.cc
unittests/LexBK/: NumericLiteral.t.cc
unittests/LexNew/: CMakeLists.txt  NumericLiteral.t.cc  StringLiteral.t.cc  TokenKind.t.cc
unittests/Lexer/: NumericLiteral.t.cc  StringLiteral.t.cc  TokenKind.t.cc  TokenizedBuffer.t.cc  TokenizedBuffer.t.h
unittests/ParseBK/: ParseNodeKind.t.cc  ParseTree.t.cc  Precedence.t.cc
unittests/Parser/: CMakeLists.txt  Parse.t.h  ParseNodeKind.t.cc  ParseTree.t.cc  Precedence.t.cc
unittests/Parser/TestCase/basics/: function_call.cocktail
unittests/Parser/TestCase/function/declaration/: basic.cocktail
unittests/Parser/TestCase/function/definition/: basic.ck  with_return_type.ck
unittests/Parser/TestCase/if/: basic.cocktail
unittests/Source/: CMakeLists.txt  SourceBuffer.t.cc
unittests/TestCase/function/definition/: with_params.cocktail
unittests/TestCase/var/: var.cocktail
unittests/Testing/: RawOstream.t.cc
(+28 files in other folders)
